menu responsive behaviour, try to fix bg image on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,11 @@ body {
   margin: 0;
   color:white;
   background: url('../src/images/evoulution-pokemon-40043879-1920-1080.jpg') no-repeat center center fixed;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
   -webkit-background-size: cover;
   -moz-background-size: cover;
-  background-size: cover;
   -o-background-size: cover;
 }
 
